--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport"content="width=device-width,initial-scale=1.0, maximum-scale=1">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="css/font-awesome/css/all.css">
 	<!-- own style -->
 	<link rel="stylesheet" href="css/index.css">
 	<!-- script -->
 	<script src='js/jquery.js'></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
+	<!-- <script src="js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src='js/index.js' defer></script>
 </head>
 <body>
-
+	<div class="app" id="app">
+		<div class="container">
+			<h1 class="title">United States GDP</h1>
+			<div class="data-board"></div>
+		</div>
+	</div>
 </body>
 </html>
