--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- own style -->
 	<link rel="stylesheet" href="css/index.css">
 	<!-- script -->
-	<script src='js/jquery.js'></script>
+	<!-- <script src='js/jquery.js'></script> -->
 	<!-- <script src="js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src='js/index.js' defer></script>
